--- a/Frontend/src/components/Collection/CollectionRecipe.module.scss
+++ b/Frontend/src/components/Collection/CollectionRecipe.module.scss
@@ -7,6 +7,7 @@
     flex-direction: row;
     align-items: center;
     box-shadow: 1px 1px 5px 1px rgb(122, 122, 122);
+    min-height: 250px;
     cursor: pointer;
 
     &:hover{
